[CHG] App: changed layout to use a keyboard, board and toast [ADD] added AppKey, AppRow, AppToast, GameBoard, GameKeyboard, TheGame, ToastContainer components and tests [CHG] dialogs: handled heading and changed styles [ADD] added guesses store and toasts store

--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,7 @@
 // @use '../../shared/foundation/scss/footer.scss';
 // @use '../shared/OfflineTicker/offline-ticker.scss';
 @use './colors.scss';
+@use './sharedStyles.scss';
 @use './shared/spacing/index.scss';
 // @use '../../shared/foundation-game/moments/buttons.scss';
 
@@ -253,4 +254,8 @@ a {
 .pz-games-app .pz-hide-games-app,
 body:not(.pz-hybrid) .pz-hide-web {
   display: none;
+}
+
+#app {
+  height: 100%;
 }
